Fixs #523: Toggle switch font is too large

--- a/src/css/angular-material-mods.scss
+++ b/src/css/angular-material-mods.scss
@@ -149,6 +149,10 @@
     visibility: hidden !important;
 }
 
+.mat-mdc-slide-toggle .mdc-label {
+    font-size: var(--fontsize-normal) !important;
+}
+
 // Snack Bar
 // -----------------------------------------------------------------------------------------------------------------------------------------
 .mdc-snackbar__surface {
